# comfyui-face3d

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  routes.py
.claude/: CLAUDE.md  planning-workflow.md  settings.json
.claude/agents/: critic.md  planner.md  researcher.md
.claude/docs/: pipeline-roadmap.md
assets/: FLAME_LICENSE.txt  FREEUV_LICENSE.txt  README.md  SMIRK_MIT_LICENSE.txt  flame_uv_template.npz
js/: extension.js
nodes/: __init__.py  _optional_deps.py  flame_core.py  flame_editor.py  flame_params.py  flame_params_edit.py  flame_params_to_mesh.py  flame_params_wire.py  flame_project_to_uv.py  flame_render.py  flame_render_util.py  flame_uv_template.py  freeuv_assets.py  freeuv_generate.py  freeuv_load.py  freeuv_runtime.py  kaolrm_load.py  kaolrm_mesh_model.py  kaolrm_preprocess.py  kaolrm_reconstruct.py  kaolrm_runtime.py  load_flame.py  mesh_preview.py  mesh_types.py  smirk_load.py  smirk_predict.py  smirk_runtime.py
scripts/: build_flame_uv_template.py  freeuv_smoke.py
tests/: conftest.py  test_flame_core.py  test_flame_params.py  test_flame_params_edit.py  test_flame_params_to_mesh.py  test_flame_project_to_uv.py  test_freeuv_assets.py  test_freeuv_generate.py  test_freeuv_load.py  test_freeuv_load.py.tmp.1071083.1776839694128  test_freeuv_runtime.py  test_kaolrm_load.py  test_kaolrm_preprocess.py  test_kaolrm_reconstruct.py  test_kaolrm_runtime.py  test_mesh_type.py  test_render.py  test_routes.py  test_smirk_load.py  test_smirk_predict.py  test_smirk_runtime.py
workflows/: flame_basic.json  freeuv_generate.json
(+5 files in other folders)
