[project]
name = "comfyui-flame"
version = "0.1.0"
description = "KaoLRM-based FLAME mesh reconstruction framework for ComfyUI."
license = { file = "LICENSE" }
requires-python = ">=3.11"

[project.urls]
Repository = "https://github.com/wswg3/comfyui-flame"

[tool.comfy]
PublisherId = "wswg3"
DisplayName = "KaoLRM Mesh"
Icon = ""
